Add booking and joining functionality for rooms; update DTOs and repository queries